# semdump

./: Cargo.toml  LICENSE  README.md
examples/: ratatui.rs
src/: formatter.rs  lib.rs
src/formatter/: annotated.rs  color.rs  ratatui.rs
src/snapshots/: semdump__tests__snapshot_annotate.snap  semdump__tests__snapshot_color_example.snap
