[package]
name = "semdump"
version = "0.1.2"
edition = "2024"
keywords = ["hexdump", "dump", "formatter", "semantic", "annotated"]
categories = ["encoding", "development-tools", "visualization"]
description = "A Rust library for rendering annotated hexdumps of binary data, highlighting specific parts based on their semantic meaning."
authors = ["Vladimir Motylenko <me@vldm.cc>"]
license = "MIT"
repository = "https://github.com/vldm/semdump"

[dependencies]
ratatui = { version = "0.30", optional = true }

[features]
default = []
ratatui = ["dep:ratatui"]

[dev-dependencies]
insta = "1"

[package.metadata.docs.rs]
features = ["ratatui"]
